# stamp

./: README.md  pyproject.toml  stamp.py
test/: stamp_test.py
