[tool.poetry]
name = "stamp"
version = "0.1.0"
description = ""
authors = ["Eric Roberts <eric@floatcard.com>"]
readme = "README.md"
packages = [{include = "stamp"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
pytest-watch = "^4.2.0"
black = "^23.3.0"
pyright = "^1.1.310"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["."]
pythonVersion = "3.10.9"
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "strict"
